--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ html, body {
 }
 
 img {
-    width: 250px;
+    width: 150px;
     margin: 0 auto;
 }
 
@@ -38,4 +38,22 @@ button {
     font-size: 20px;
     text-align: center;
     font-family: 'Rubik', sans-serif;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+ul li {
+    background-color: #FFFDF8;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    text-align: center;
+    padding: 15px;
+    flex-grow: 1;
+    font-size: 20px;
 }
