--- a/index.css
+++ b/index.css
@@ -3,6 +3,8 @@ html, body {
     padding: 0;
     font-family: 'Rubik', sans-serif;
     background-color: #EEF0F4;
+    color: #432000;
+    user-select: none;
 }
 
 .container {
@@ -40,6 +42,11 @@ button {
     font-family: 'Rubik', sans-serif;
 }
 
+button:hover {
+    background-color: #432000;
+    cursor: pointer;
+}
+
 ul {
     list-style-type: none;
     padding: 0;
@@ -49,11 +56,16 @@ ul {
 }
 
 ul li {
-    background-color: #FFFDF8;
-    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
-    text-align: center;
-    padding: 15px;
-    flex-grow: 1;
     font-size: 20px;
+    background-color: #FFFDF8;
+    padding: 15px;
+    border-radius: 8px;
+    flex-grow: 1;
+    text-align: center;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2)
+}
+
+ul li:hover {
+    background-color: #FFECC7;
+    cursor: pointer;
 }
