--- a/index.css
+++ b/index.css
@@ -14,6 +14,14 @@ html, body {
     margin: 30px auto;
 }
 
+h1#title {
+    text-align: center;
+    color: #02A695;
+    margin-bottom: 0;
+    margin-top: 10px;
+    font-size: 2.2em;
+}
+
 img {
     width: 200px;
     margin: 0 auto;
@@ -71,10 +79,9 @@ ul li:hover {
     cursor: pointer;
 }
 
-h1#title {
-    text-align: center;
+p#delete-instructions {
     color: #02A695;
-    margin-bottom: 0;
-    margin-top: 10px;
-    font-size: 2.2em;
+    text-align: center;
+    margin-top: 0;
 }
+
