--- a/index.css
+++ b/index.css
@@ -19,7 +19,8 @@ h1#title {
     color: #02A695;
     margin-bottom: 0;
     margin-top: 10px;
-    font-size: 2.2em;
+    font-size: 2.7em;
+    font-family: 'Hanuman', serif;
 }
 
 img {
